--- a/Gerador de Senhas - 3B - N24/style.css
+++ b/Gerador de Senhas - 3B - N24/style.css
@@ -6,6 +6,9 @@
     --fundo-senha: #00244D;
     --fundo-texto: #001E40;
     --borda: #0075FF;
+    --fraca: #E71B32;
+    --media: #FAF408;
+    --forte: #00FF85;
     font-family: "Roboto", sans-serif;
     .roboto-mono{
         font-family: "Roboto Mono", monospace;
@@ -122,6 +125,47 @@ label{
     width: 20px;
     height: 20px;
     cursor: pointer;
+}
+
+.barra{
+    background-color: var(--fundo-senha);
+    height: 30px;
+    width: 100px;
+}
+
+.forca{
+    height: 30px;
+    position: relative;
+    bottom: 30px;
+}
+
+.fraca{
+    width: 25%;
+    background-color: var(--fraca);
+    height: 30px;
+    position: relative;
+    bottom: 30px;
+}
+
+.media{
+    width: 50%;
+    background-color: var(--media);
+    height: 30px;
+    position: relative;
+    bottom: 30px;
+}
+
+.forte{
+    width: 100%;
+    background-color: var(--forte);
+    height: 30px;
+    position: relative;
+    bottom: 30px;
+}
+
+.parametro-senha-textos{
+    display: flex;
+    justify-content: space-between;
 }
 
 @media screen and (min-width: 768px){
